--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,25 @@
 html,
+:root {
+  --theme: linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+  --themeReverse: linear-gradient(
+    90deg,
+    hsla(58, 100%, 68%, 1) 0%,
+    hsla(33, 100%, 53%, 1) 100%
+  );
+  --icon: hsla(33, 100%, 53%, 1);
+  --btn1: hsla(58, 100%, 68%, 1);
+  --bg1: rgb(248, 142, 12, 0.1);
+ 
+}
+
 body {
   padding: 0;
   margin: 0;
+font-size:100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +31,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media (max-width: 570px) {
+  body {
+    font-size: 90%;
+  }
 }
